fixed horizontal layout to scroll for overflow instead of adjusting boundaries

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,6 +8,7 @@
   height: calc(100vh - 56px);
   margin-top: 56px;
   color: #ffffff;
+  overflow: scroll;
 }
 
 .slideout {
