--- a/src/app/home/side-menu/side-menu.component.css
+++ b/src/app/home/side-menu/side-menu.component.css
@@ -4,6 +4,7 @@
   width: 300px;
   background-color: rgb(34, 37, 41);
   border-top: 1px solid black;
+  overflow: scroll;
 }
 
 .form-control {
